syntax = "proto3";
package bookstore;
option go_package = "services/bookstore";
import "google/api/annotations.proto";

message CreateBookRequest {
  string title = 1;
  string content = 2;
}

message Book {
  string id = 1;
  string title = 2;
  string content = 3;
}

message GetBookListRequest {

}

message BookList {
  repeated Book list = 1;
}

service BookStoreService {
  rpc CreateBook(CreateBookRequest) returns (Book) {
    option (google.api.http) = {
      post: "/v1/books",
      body: "*"
    };
  }

  rpc GetBook(GetBookListRequest) returns (BookList) {
    option (google.api.http) = {
      get: "/v1/books"
    };
  }
}